Fix alignement du nav

--- a/src/assets/scss/layouts/_nav.scss
+++ b/src/assets/scss/layouts/_nav.scss
@@ -34,9 +34,16 @@ nav {
         }
 
         ul {
-            display: flex;
+            display: inline-flex;
             gap: 10px;
             align-items: center;
+            justify-content: center;
+            padding: 0;
+            width: 100%;
+
+            @include min($md) {
+                width: fit-content;
+            }
 
             a:hover {
                 svg path {
